crates/typestate-pipeline/tests/ui/internal_with_setter.stderr
error: `internal` is incompatible with `setter = …`
  --> tests/ui/internal_with_setter.rs:10:23
   |
10 |     #[field(internal, setter = trim)]
   |                       ^^^^^^

error: [note] `internal` declared here
       = note: internal fields have no setter — they're set positionally on `new(…)`
       = help: remove `internal` to expose a setter, or remove `setter = …`
  --> tests/ui/internal_with_setter.rs:10:13
   |
10 |     #[field(internal, setter = trim)]
   |             ^^^^^^^^
